--- a/src/TrialHp.css
+++ b/src/TrialHp.css
@@ -439,7 +439,7 @@ margin-top:40px;
   }
   
   .container {
-      margin-top: 500px;
+      margin-top:20px;
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
@@ -503,6 +503,11 @@ margin-top:40px;
     min-height: 100vh;
     background: #57bd84;
   }*/
+  .Login-Register{
+margin-top: -30px;
+background-image: 
+url(https://img.freepik.com/free-vector/people-protective-hazmat-suits-carrying-barrels-with-warning-sign-flu-outbreak-china-pathogen-respiratory-quarantine-coronavirus-concept-hospital-interior-horizontal_48369-23066.jpg?size=626&ext=jpg);
+  }
   #cb1,#cb2 { 
     height: 0;
     width: 10px;
@@ -551,3 +556,203 @@ margin-top:40px;
     color: white;
   }
   
+.carousel-inner p{
+margin-top:-200px;
+}
+
+
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+.footer-section {
+  margin-top:10px;
+background: #EAE479;
+position: relative;
+}
+.footer-cta {
+border-bottom: 1px solid #373636;
+}
+.single-cta i {
+color: black;
+font-size: 30px;
+float: left;
+margin-top: 8px;
+}
+.cta-text {
+padding-left: 15px;
+display: inline-block;
+cursor: pointer;
+}
+.cta-text span:hover{
+  color: #1c55ac;
+  font-weight: bold;
+}
+.cta-text h4 {
+color: #1c55ac;
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 2px;
+}
+.cta-text span {
+color: black;
+font-size: 20px;
+}
+.footer-content {
+position: relative;
+z-index: 2;
+}
+.footer-pattern img {
+position: absolute;
+top: 0;
+left: 0;
+height: 330px;
+background-size: cover;
+background-position: 100% 100%;
+}
+.footer-logo {
+margin-bottom: 30px;
+}
+.footer-logo img {
+  max-width: 200px;
+}
+.footer-text p {
+margin-bottom: 14px;
+font-size: 20px;
+    color: black;
+line-height: 28px;
+margin-left:0px;
+}
+.footer-social-icon span {
+color: #1c55ac;
+display: block;
+font-size: 20px;
+font-weight: 700;
+font-family: 'Poppins', sans-serif;
+margin-bottom: 20px;
+margin-left: 85px;
+}
+.footer-social-icon a {
+color: #fff;
+font-size: 16px;
+margin-right: 15px;
+}
+.footer-social-icon i {
+  margin-left: 30px;
+height: 40px;
+width: 40px;
+text-align: center;
+line-height: 38px;
+border-radius: 50%;
+}
+#whatsappicon{
+  background-color: #25d366;
+}
+#instagramicon{
+  background:linear-gradient(45deg,#405de6,#5851db,#833ab4,#c13584,#e1306c,#fd1d1d);
+}
+.facebook-bg{
+background: #3B5998;
+}
+.twitter-bg{
+background: #55ACEE;
+}
+.google-bg{
+background: #DD4B39;
+}
+.footer-widget-heading h3 {
+color: #1c55ac;
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 40px;
+position: relative;
+}
+.footer-widget-heading h3::before {
+content: "";
+position: absolute;
+left: 0;
+bottom: -15px;
+height: 2px;
+width: 50px;
+background: black;
+}
+.footer-widget ul li {
+display: inline-block;
+float: left;
+width: 50%;
+margin-bottom: 12px;
+}
+.footer-widget ul li a:hover{
+color: #1c55ac;
+font-weight: bold;
+}
+.footer-widget ul li a {
+color: black;
+text-transform: capitalize;
+font-size: 20px;
+text-decoration: none;
+}
+.subscribe-form {
+position: relative;
+overflow: hidden;
+}
+.subscribe-form input {
+width: 449px;
+padding: 14px 28px;
+background: #dcdcdc;
+border: 1px solid #dcdcdc;
+color: #000000;
+font-size: 20px;
+}
+.subscribe-form button {
+  position: absolute;
+  right: 0;
+  background: #1c55ac;
+  padding: 13px 20px;
+  border: 1px solid #1c55ac;
+  top: 0;
+
+}
+.subscribe-form button i {
+color: #fff;
+font-size: 28px;
+transform: rotate(-6deg);
+}
+.copyright-area{
+background: #202020;
+padding: 25px 0;
+}
+.copyright-text p {
+margin: 0;
+font-size: 14px;
+color: #dcdcdc;
+font-size: 20px;
+
+}
+.copyright-text p a{
+color: #EAE479;
+text-decoration: none;
+}
+.footer-menu li {
+display: inline-block;
+margin-left: 20px;
+}
+.footer-menu li:hover a{
+  color: #1c55ac;
+  font-weight: bold;
+}
+.footer-menu li a {
+font-size: 14px;
+color: #dcdcdc;
+font-size: 20px;
+text-decoration: none;
+}
+
+.fa-h-square{
+ margin-top:0px;
+ margin-left: 90px;
+}
+
+
