--- a/src/TrialHp.css
+++ b/src/TrialHp.css
@@ -267,7 +267,7 @@ margin-top: -5px;
 
   
 
-  .Side-Toggle-Bar{
+  #Side-Toggle-Bar{
     background-color: #dcdcdc;
     width: 100%;
     height:11%;
