--- a/src/RoomCategories.css
+++ b/src/RoomCategories.css
@@ -331,7 +331,7 @@ flex-shrink: 0;
   }
   .footer-widget ul li {
   display: inline-block;
-  float: left;
+  /* float: left; */
   width: 50%;
   margin-bottom: 12px;
   }
