--- a/src/TrialHp.css
+++ b/src/TrialHp.css
@@ -332,14 +332,15 @@ background-color: aqua;
  .card-body{
   height: 200px;
        width:250px;
-     box-shadow:  5px -5px 10px 0px #EAE479;
+       box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+     /* box-shadow:  5px -5px 10px 0px #EAE479; */
      background-color: #dcdcdc;
     
  }
- #tele-icon{
+ #path-icon{
      width: 100px;
      height: 100px;
-     margin-left: 60px;
+     margin-left: 70px;
  }
  #room-icon{
     width: 100px;
@@ -379,7 +380,7 @@ background-color: aqua;
  .card-body:hover{
     background-color:#1c55ac;
  }
- .card-body:hover #tele-icon:hover,#insurance-icon:hover,#query-icon:hover,#guide-icon:hover,#room-icon:hover,#clinics-icon:hover,#wellness-icon:hover,#doctor-icon:hover{
+ .card-body:hover #path-icon:hover,#insurance-icon:hover,#query-icon:hover,#guide-icon:hover,#room-icon:hover,#clinics-icon:hover,#wellness-icon:hover,#doctor-icon:hover{
      color: white;
  }
  .card-body:hover #tele-link:hover,#insurance-link:hover,#query-link:hover,#guide-link:hover,#room-link:hover,#clinics-link:hover,#wellness-link:hover,#doctor-link:hover{
@@ -440,7 +441,7 @@ margin-top:40px;
   }
   
   .container input[type=submit]:hover {
-    background-color:#1c55ac;
+    background-color:#27b5f5;
   }
   
   .container {
@@ -449,7 +450,8 @@ margin-top:40px;
     border-radius: 5px;
     position: relative;
     padding: 20px;
-    box-shadow:0px 8px 16px 0px rgba(234	,228,	121);
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    /* box-shadow:0px 8px 16px 0px rgba(234	,228,	121); */
   }
   #Form-Back-Image{
     /* https://static.vecteezy.com/system/resources/previews/001/954/184/non_2x/medical-doctor-with-a-stethoscope-isolated-on-gray-background-free-photo.jpg */
@@ -553,8 +555,7 @@ height: 250px;
     background: #1c55ac;
     position: relative; 
     overflow: hidden;
-    box-shadow:0px 8px 16px 0px rgba(234	,228,	121);
-  }
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);  }
   #lcb1::after,#lcb2::after {
     content: '';
     position: absolute;
@@ -566,8 +567,7 @@ height: 250px;
     transition: transform 0.3s ease-in;
     mix-blend-mode: difference;
     background: radial-gradient(circle at center, #fff 24%, #000 25%, #000 100%);
-    box-shadow:0px 8px 16px 0px rgba(234	,228,	121);
-  }
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);  }
   #lcb1:active,#lcb2:active {
     top: 3px;
     box-shadow: none;
