--- a/src/TrialHp.css
+++ b/src/TrialHp.css
@@ -102,13 +102,37 @@ margin-left: -20px;
 @media only screen and (max-width:400px){
     .navbar{
         width: 100%;
-        height: 150px;
+        height: 100px;
     text-align: center;
     overflow: hidden; 
     z-index: 1030;
     }
-   
-}
+  }
+  @media only screen and (max-width:480px){
+  .navbar{
+      width: 220%;
+      height: 80px;
+  text-align: center;
+  overflow: hidden; 
+  z-index: 1030;
+  }
+  #silver-jubilee,#care-logo,#healthcare-text{
+    display: none;
+    
+  }
+  .alert{
+    width: 150%;
+  }
+  #hospital-name{
+    margin-left: 150px;
+    height: 500px;
+    margin-top: -50px;
+    width: 100%;
+  }
+  #Side-Toggle-Bar,.Side-Toggle-Bar{
+width:600px;
+  }
+}  
 @media only screen and (max-width:400px){
     #Side-Toggle-Bar{
 top:-250px;
